VOLT Refactor review tests: update integration and service tests for improved structure and clarity