@@ -1,30 +1,28 @@
 package pt.ua.tqs.voltconnect.integration;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import pt.ua.tqs.voltconnect.controllers.ReviewController;
 import pt.ua.tqs.voltconnect.dtos.ReviewRequestDTO;
 import pt.ua.tqs.voltconnect.models.ChargingStation;
 import pt.ua.tqs.voltconnect.models.Review;
-import pt.ua.tqs.voltconnect.repositories.ChargingStationRepository;
-import pt.ua.tqs.voltconnect.repositories.ReviewRepository;
+import pt.ua.tqs.voltconnect.services.ReviewService;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
+import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-import static org.junit.jupiter.api.Assertions.*;
 
-@SpringBootTest
-@AutoConfigureMockMvc
-class ReviewIntegrationTest {
+@WebMvcTest(ReviewController.class)
+class ReviewControllerIntegrationTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -32,70 +30,68 @@ class ReviewIntegrationTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    @Autowired
-    private ReviewRepository reviewRepository;
+    @MockitoBean
+    private ReviewService reviewService;
 
-    @Autowired
-    private ChargingStationRepository chargingStationRepository;
-
-    private ChargingStation chargingStation;
+    private ReviewRequestDTO requestDTO;
+    private Review review;
 
     @BeforeEach
     void setUp() {
-        reviewRepository.deleteAll();
-        chargingStationRepository.deleteAll();
+        requestDTO = new ReviewRequestDTO();
+        requestDTO.setChargingStationId(1L);
+        requestDTO.setRating(5);
+        requestDTO.setComment("Awesome station!");
 
-        chargingStation = ChargingStation.builder()
-                .city("Test City")
-                .location(Arrays.asList(40.0f, -8.0f))
+        ChargingStation station = ChargingStation.builder()
+                .id(1L)
+                .city("City")
+                .location(List.of(40.0f, -8.0f))
                 .operatorId(1L)
-                .chargers(new ArrayList<>())
+                .chargers(List.of())
                 .build();
-        chargingStation = chargingStationRepository.save(chargingStation);
+
+        review = Review.builder()
+                .id(10L)
+                .chargingStation(station)
+                .rating(5)
+                .comment("Awesome station!")
+                .build();
     }
 
     @Test
-    void createAndGetReview_ShouldWork() throws Exception {
-        // Create review
-        ReviewRequestDTO requestDTO = new ReviewRequestDTO();
-        requestDTO.setChargingStationId(chargingStation.getId());
-        requestDTO.setRating(4);
-        requestDTO.setComment("Great station!");
+    void getAllReviews_ShouldReturnList() throws Exception {
+        when(reviewService.getAllReviews()).thenReturn(List.of(review));
 
-        MvcResult result = mockMvc.perform(post("/api/reviews")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(requestDTO)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.chargingStationId").value(chargingStation.getId()))
-                .andExpect(jsonPath("$.rating").value(4))
-                .andExpect(jsonPath("$.comment").value("Great station!"))
-                .andReturn();
-
-        // Get all reviews
         mockMvc.perform(get("/api/reviews"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].chargingStationId").value(chargingStation.getId()))
-                .andExpect(jsonPath("$[0].rating").value(4))
-                .andExpect(jsonPath("$[0].comment").value("Great station!"));
-
-        // Verify in database
-        Review savedReview = reviewRepository.findAll().get(0);
-        assertEquals(chargingStation.getId(), savedReview.getChargingStation().getId());
-        assertEquals(4, savedReview.getRating());
-        assertEquals("Great station!", savedReview.getComment());
+                .andExpect(jsonPath("$[0].chargingStationId").value(1L))
+                .andExpect(jsonPath("$[0].rating").value(5))
+                .andExpect(jsonPath("$[0].comment").value("Awesome station!"));
     }
 
     @Test
-    void createReview_WithInvalidData_ShouldReturnBadRequest() throws Exception {
-        // Create review with invalid rating
-        ReviewRequestDTO requestDTO = new ReviewRequestDTO();
-        requestDTO.setChargingStationId(chargingStation.getId());
-        requestDTO.setRating(6); // Invalid rating (should be 1-5)
-        requestDTO.setComment("Great station!");
+    void createReview_ValidRequest_ShouldReturnCreatedReview() throws Exception {
+        when(reviewService.createReview(any(ReviewRequestDTO.class))).thenReturn(review);
 
         mockMvc.perform(post("/api/reviews")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(requestDTO)))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.chargingStationId").value(1L))
+                .andExpect(jsonPath("$.rating").value(5))
+                .andExpect(jsonPath("$.comment").value("Awesome station!"));
     }
-} 
+
+    @Test
+    void createReview_InvalidRequest_ShouldReturnBadRequest() throws Exception {
+        when(reviewService.createReview(any(ReviewRequestDTO.class)))
+                .thenThrow(new IllegalArgumentException("Invalid rating"));
+
+        mockMvc.perform(post("/api/reviews")
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(requestDTO)))
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Invalid rating"));
+    }
+}
